[package]
name = "milkshake-compositor"
version = "0.0.0"
edition = "2021"

[dependencies]
ash.workspace = true
drm = { version = "0.14.0", default-features = false }
bevy.workspace = true
bevy-smithay.workspace = true
smithay.workspace = true
smithay-drm-extras.workspace = true
thiserror.workspace = true
wgpu.workspace = true

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
ash = { version = "0.37.3", default-features = false }
bevy = { version = "0.14.2", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_state",
    "bevy_render",
    "bevy_pbr",
    "bevy_ui",
    "tonemapping_luts",
    "png",
] }
bevy-smithay.path = "crates/bevy-smithay"
smithay = { git = "https://github.com/Smithay/smithay", version = "0.3.0", default-features = false, features = [
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "desktop",
    "xwayland",
] }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay", version = "0.1.0", default-features = false, features = [
    "display-info",
] }
thiserror = "1.0.64"
wgpu = { version = "0.20.1", default-features = false }

[profile.dev.package."*"]
opt-level = 2
